--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>module test</title>
+    <meta charset="utf-8" />
     <script src="module.js"></script>
     <script>
         Module.config = {
