增加自动正则查找依赖模块数组

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
             baseURI:""
         }
         Module.use("A",function(a){
-            console.log(a);
+            console.log(a.name);
         });
     </script>
 </head>
